force-app/main/default/objects/Youth_Transition_Plan__c/fields/How_to_find_assistance_with_applying__c.field-meta.xml
<CustomField>
    <fullName>How_to_find_assistance_with_applying__c</fullName>
    <inlineHelpText>How to find assistance with applying for summer youth employment?</inlineHelpText>
    <label>How to find assistance with applying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>