force-app/main/default/objects/Youth_Transition_Plan__c/fields/How_to_get_on_the_HUD_list__c.field-meta.xml
<CustomField>
    <fullName>How_to_get_on_the_HUD_list__c</fullName>
    <inlineHelpText>How to get on the HUD list?</inlineHelpText>
    <label>How to get on the HUD list?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>