force-app/main/default/objects/Youth_Transition_Plan__c/fields/How_to_secure_funding_for_housing__c.field-meta.xml
<CustomField>
    <fullName>How_to_secure_funding_for_housing__c</fullName>
    <inlineHelpText>How to secure funding for housing?</inlineHelpText>
    <label>How to secure funding for housing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>