force-app/main/default/objects/Youth_Transition_Plan__c/fields/If_there_any_inaccuracies_in_your_credit__c.field-meta.xml
<CustomField>
    <fullName>If_there_any_inaccuracies_in_your_credit__c</fullName>
    <inlineHelpText>If there any inaccuracies in your credit report, were you given any assistance in how to correct it?</inlineHelpText>
    <label>If there any inaccuracies in your credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>