force-app/main/default/objects/Youth_Transition_Plan__c/fields/If_you_are_unable_to_make_a_decision__c.field-meta.xml
<CustomField>
    <fullName>If_you_are_unable_to_make_a_decision__c</fullName>
    <inlineHelpText>If you are unable to make a decision about your health or treatment, is there anyone you would like to make those decisions for you?</inlineHelpText>
    <label>If you are unable to make a decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>