force-app/main/default/objects/Youth_Transition_Plan__c/fields/If_your_worker_is_aware_of_funding_and__c.field-meta.xml
<CustomField>
    <fullName>If_your_worker_is_aware_of_funding_and__c</fullName>
    <inlineHelpText>If your worker is aware of funding and resources for higher education (college and vocational)?</inlineHelpText>
    <label>If your worker is aware of funding and</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>