force-app/main/default/objects/Youth_Transition_Plan__c/fields/Is_your_worker_aware_of_what_you_need_to__c.field-meta.xml
<CustomField>
    <fullName>Is_your_worker_aware_of_what_you_need_to__c</fullName>
    <inlineHelpText>Is your worker aware of what you need to graduate?</inlineHelpText>
    <label>Is your worker aware of what you need to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>