force-app/main/default/objects/Youth_Transition_Plan__c/fields/Issues_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Issues_Concerns__c</fullName>
    <label>Issues/Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>