force-app/main/default/objects/Youth_Transition_Plan__c/fields/LDSS_Refused_to_sign__c.field-meta.xml
<CustomField>
    <fullName>LDSS_Refused_to_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDSS-Refused to sign</label>
    <type>Checkbox</type>
</CustomField>