force-app/main/default/objects/Youth_Transition_Plan__c/fields/LDSS_Representative_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>LDSS_Representative_Sign_Date__c</fullName>
    <label>LDSS Representative Sign Date</label>
    <type>Date</type>
</CustomField>