force-app/main/default/objects/Youth_Transition_Plan__c/fields/LDSS_Representative_Signature__c.field-meta.xml
<CustomField>
    <fullName>LDSS_Representative_Signature__c</fullName>
    <label>LDSS Representative Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>