force-app/main/default/objects/Youth_Transition_Plan__c/fields/LDSS_Uploaded_Signed_Copy__c.field-meta.xml
<CustomField>
    <fullName>LDSS_Uploaded_Signed_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDSS-Uploaded Signed Copy</label>
    <type>Checkbox</type>
</CustomField>