force-app/main/default/objects/Youth_Transition_Plan__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <inlineHelpText>Monthly Amount?</inlineHelpText>
    <label>Monthly Amount?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>