force-app/main/default/objects/Youth_Transition_Plan__c/fields/My_long_term_goal_to_build_or_maintain__c.field-meta.xml
<CustomField>
    <fullName>My_long_term_goal_to_build_or_maintain__c</fullName>
    <inlineHelpText>My long term goal to build or maintain strong relationships with supportive adults is</inlineHelpText>
    <label>My long term goal to build or maintain</label>
    <type>TextArea</type>
</CustomField>