force-app/main/default/objects/Youth_Transition_Plan__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>The following signature indicates a commitment to reach his/her transition plan goals help</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>