force-app/main/default/objects/Youth_Transition_Plan__c/fields/Or_how_to_find_information_for_low__c.field-meta.xml
<CustomField>
    <fullName>Or_how_to_find_information_for_low__c</fullName>
    <inlineHelpText>Or, how to find information for low income housing in the area, if needed?</inlineHelpText>
    <label>Or, how to find information for low</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>