force-app/main/default/objects/Youth_Transition_Plan__c/fields/Plan_for_housing_upon_discharge__c.field-meta.xml
<CustomField>
    <fullName>Plan_for_housing_upon_discharge__c</fullName>
    <inlineHelpText>Plan for housing upon discharge</inlineHelpText>
    <label>Plan for housing upon discharge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>