force-app/main/default/objects/Youth_Transition_Plan__c/fields/Plans_for_Medical_Coverage_after_Foster__c.field-meta.xml
<CustomField>
    <fullName>Plans_for_Medical_Coverage_after_Foster__c</fullName>
    <inlineHelpText>Plans for Medical Coverage after Foster Care(Insurance ? How will you access healthcare - doctors,visits,medicines?)</inlineHelpText>
    <label>Plans for Medical Coverage after Foster</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>