force-app/main/default/objects/Youth_Transition_Plan__c/fields/Regular_exams_and_annual_physicals_are_i__c.field-meta.xml
<CustomField>
    <fullName>Regular_exams_and_annual_physicals_are_i__c</fullName>
    <inlineHelpText>Regular exams and annual physicals are important to maintain good health</inlineHelpText>
    <label>Regular exams and annual physicals are i</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>