force-app/main/default/objects/Youth_Transition_Plan__c/fields/Service_Delivery_Needs__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Needs__c</fullName>
    <label>Service Delivery &amp; Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>