force-app/main/default/objects/Youth_Transition_Plan__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Casevault Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Youth_Transition_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>