force-app/main/default/objects/Youth_Transition_Plan__c/fields/The_education_requirements_needed_to__c.field-meta.xml
<CustomField>
    <fullName>The_education_requirements_needed_to__c</fullName>
    <inlineHelpText>The education requirements needed to obtain a Drivers License?</inlineHelpText>
    <label>The education requirements needed to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>