force-app/main/default/objects/Youth_Transition_Plan__c/fields/The_importance_of_having_a_bank_account__c.field-meta.xml
<CustomField>
    <fullName>The_importance_of_having_a_bank_account__c</fullName>
    <inlineHelpText>The importance of having a bank account (i.e. savings/checking) and budgeting?</inlineHelpText>
    <label>The importance of having a bank account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>