force-app/main/default/objects/Youth_Transition_Plan__c/fields/The_purpose_of_each_medication_you_ve__c.field-meta.xml
<CustomField>
    <fullName>The_purpose_of_each_medication_you_ve__c</fullName>
    <inlineHelpText>The purpose of each medication you&apos;ve been prescribed?</inlineHelpText>
    <label>The purpose of each medication you&apos;ve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>