force-app/main/default/objects/Youth_Transition_Plan__c/fields/The_State_of_Maryland_benchmark_policy__c.field-meta.xml
<CustomField>
    <fullName>The_State_of_Maryland_benchmark_policy__c</fullName>
    <inlineHelpText>The State of Maryland has a benchmark policy that outlines all the information &amp; tools you should receive by age 14,15,16,17 and 18?(Ask your social worker for a copy of the Benchmark policy)</inlineHelpText>
    <label>The State of Maryland benchmark policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>