force-app/main/default/objects/Youth_Transition_Plan__c/fields/Transition_Plan_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Transition_Plan_Completed_Date__c</fullName>
    <label>Transition Plan Completed Date</label>
    <type>Date</type>
</CustomField>