force-app/main/default/objects/Youth_Transition_Plan__c/fields/What_information_is_needed__c.field-meta.xml
<CustomField>
    <fullName>What_information_is_needed__c</fullName>
    <inlineHelpText>What information is needed for medical coverage after foster care?</inlineHelpText>
    <label>What information is needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>