force-app/main/default/objects/Youth_Transition_Plan__c/fields/What_is_your_current_source_of_income__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_current_source_of_income__c</fullName>
    <inlineHelpText>What is your current source of income?</inlineHelpText>
    <label>What is your current source of income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>