force-app/main/default/objects/Youth_Transition_Plan__c/fields/What_s_needed_to_get_housing__c.field-meta.xml
<CustomField>
    <fullName>What_s_needed_to_get_housing__c</fullName>
    <inlineHelpText>What&apos;s needed to get housing(i.e. criminal background, teasing agreement)?</inlineHelpText>
    <label>What&apos;s needed to get housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>