force-app/main/default/objects/Youth_Transition_Plan__c/fields/When_you_need_to_take_the_SATs__c.field-meta.xml
<CustomField>
    <fullName>When_you_need_to_take_the_SATs__c</fullName>
    <inlineHelpText>When you need to take the SATs?</inlineHelpText>
    <label>When you need to take the SATs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>