force-app/main/default/objects/Youth_Transition_Plan__c/fields/Where_to_find_assistance_in_applying__c.field-meta.xml
<CustomField>
    <fullName>Where_to_find_assistance_in_applying__c</fullName>
    <inlineHelpText>Where to find assistance in applying for college and working through the admission process</inlineHelpText>
    <label>Where to find assistance in applying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>