force-app/main/default/objects/Youth_Transition_Plan__c/fields/Where_to_find_help_with_interviewing_ski__c.field-meta.xml
<CustomField>
    <fullName>Where_to_find_help_with_interviewing_ski__c</fullName>
    <inlineHelpText>Where to find help with interviewing skills,resume building, appropriate dressing, and proper behavior in the workspace?</inlineHelpText>
    <label>Where to find help with interviewing ski</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>