force-app/main/default/objects/Youth_Transition_Plan__c/fields/Whether_transportation_is_in_place__c.field-meta.xml
<CustomField>
    <fullName>Whether_transportation_is_in_place__c</fullName>
    <inlineHelpText>Whether transportation is in place to remain in your same school if you change placements?</inlineHelpText>
    <label>Whether transportation is in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>