force-app/main/default/objects/Youth_Transition_Plan__c/fields/Which_clinics_doctor_offices_access__c.field-meta.xml
<CustomField>
    <fullName>Which_clinics_doctor_offices_access__c</fullName>
    <inlineHelpText>Which clinics/doctor offices you can access with your insurance?</inlineHelpText>
    <label>Which clinics/doctor offices access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>