force-app/main/default/objects/Youth_Transition_Plan__c/fields/Who_is_currently_your_support_system__c.field-meta.xml
<CustomField>
    <fullName>Who_is_currently_your_support_system__c</fullName>
    <inlineHelpText>Who is currently your support system? Why do you feel closely connected to ? How are they support?</inlineHelpText>
    <label>Who is currently your support system</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>