force-app/main/default/objects/Youth_Transition_Plan__c/fields/Why_credit_history_is_so_important__c.field-meta.xml
<CustomField>
    <fullName>Why_credit_history_is_so_important__c</fullName>
    <inlineHelpText>Why credit history is so important?</inlineHelpText>
    <label>Why credit history is so important?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>