force-app/main/default/objects/Youth_Transition_Plan__c/fields/You_must_inform_your_caseworker__c.field-meta.xml
<CustomField>
    <fullName>You_must_inform_your_caseworker__c</fullName>
    <inlineHelpText>You must inform your caseworker of any address changes to receive health coverage after care</inlineHelpText>
    <label>You must inform your caseworker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>