force-app/main/default/objects/Youth_Transition_Plan__c/fields/Your_caseworker_will_provide_you_with__c.field-meta.xml
<CustomField>
    <fullName>Your_caseworker_will_provide_you_with__c</fullName>
    <inlineHelpText>Your caseworker will provide you with a copy of the Advance Directive for Selecting a Health Care Agent, to help you in the process of appointing a Health Care Agent should you choose to do so</inlineHelpText>
    <label>Your caseworker will provide you with</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discussed the importance of designating a Health Care Agent</fullName>
            </value>
            <value>
                <fullName>Received copy of the Advance Directive for Selecting a Health Care-Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>