force-app/main/default/objects/Youth_Transition_Plan__c/fields/Your_credit_score__c.field-meta.xml
<CustomField>
    <fullName>Your_credit_score__c</fullName>
    <inlineHelpText>Your credit score?</inlineHelpText>
    <label>Your credit score?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>