force-app/main/default/objects/Youth_Transition_Plan__c/fields/Your_educational_requirements_to_graduat__c.field-meta.xml
<CustomField>
    <fullName>Your_educational_requirements_to_graduat__c</fullName>
    <inlineHelpText>Your educational requirements to graduate?</inlineHelpText>
    <label>Your educational requirements to graduat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>