force-app/main/default/objects/Youth_Transition_Plan__c/fields/Youth_Refused_to_sign__c.field-meta.xml
<CustomField>
    <fullName>Youth_Refused_to_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Youth-Refused to sign</label>
    <type>Checkbox</type>
</CustomField>