force-app/main/default/objects/Youth_Transition_Plan__c/fields/Youth_s_Strength__c.field-meta.xml
<CustomField>
    <fullName>Youth_s_Strength__c</fullName>
    <label>Youth&apos;s Strength</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>