force-app/main/default/objects/Youth_Transition_Plan__c/fields/Youth_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Youth_Sign_Date__c</fullName>
    <label>Youth Sign Date</label>
    <type>Date</type>
</CustomField>