force-app/main/default/objects/Youth_Transition_Plan__c/fields/Youth_Signature__c.field-meta.xml
<CustomField>
    <fullName>Youth_Signature__c</fullName>
    <label>Youth Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>