force-app/main/default/objects/Youth_Transition_Plan__c/fields/Youth_Uploaded_Signed_Copy__c.field-meta.xml
<CustomField>
    <fullName>Youth_Uploaded_Signed_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Youth-Uploaded Signed Copy</label>
    <type>Checkbox</type>
</CustomField>